# gpt-arena

./: .gitignore  pyproject.toml
examples/hello_world/: intro.yml  tools.json  user.txt
gpt_arena/: chat.py  config.py  text.py
toys/: craft.py  gen_letters.py  gen_target.py  gen_words.py
